--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_container"
     android:layout_width="match_parent"
@@ -8,15 +7,22 @@
     android:orientation="vertical"
     tools:context=".ui.main.MainFragment">
 
-    <!--    <com.github.ybq.android.spinkit.SpinKitView-->
-    <!--        xmlns:app="http://schemas.android.com/apk/res-auto"-->
-    <!--        android:id="@+id/spin_kit"-->
-    <!--        style="@style/SpinKitView.Large.Circle"-->
-    <!--        android:layout_width="match_parent"-->
-    <!--        android:layout_height="match_parent"-->
-    <!--        android:layout_gravity="center"-->
-    <!--        app:SpinKit_Color="@color/white" />-->
+<!--            <com.github.ybq.android.spinkit.SpinKitView-->
+<!--                xmlns:app="http://schemas.android.com/apk/res-auto"-->
+<!--                android:id="@+id/spin_kit"-->
+<!--                style="@style/SpinKitView.DoubleBounce"-->
+<!--                android:layout_width="wrap_content"-->
+<!--                android:layout_height="wrap_content"-->
+<!--                android:layout_gravity="center"-->
+<!--                app:SpinKit_Color="@color/marrs_green" />-->
+    <androidx.core.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
     <LinearLayout
         android:id="@+id/now_playing_container"
@@ -29,16 +35,19 @@
             android:id="@+id/now_playing_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/now_playing_tv"
             android:fontFamily="sans-serif-black"
+            android:text="@string/now_playing_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
+
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/now_playing_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
+
+        <include layout="@layout/card_films"/>
     </LinearLayout>
 
     <LinearLayout
@@ -52,16 +61,19 @@
             android:id="@+id/popular_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/popular_tv"
             android:fontFamily="sans-serif-black"
+            android:text="@string/popular_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/popular_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
+
+        <include layout="@layout/card_films"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -75,16 +87,19 @@
             android:id="@+id/top_rated_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/top_rated_tv"
             android:fontFamily="sans-serif-black"
+            android:text="@string/top_rated_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/top_rated_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
+
+        <include layout="@layout/card_films"/>
+
     </LinearLayout>
 
     <LinearLayout
@@ -98,20 +113,23 @@
             android:id="@+id/upcoming_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@string/upcoming_tv"
             android:fontFamily="sans-serif-black"
+            android:text="@string/upcoming_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp"/>
+            android:textSize="20sp" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/upcoming_rv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"/>
+            android:orientation="horizontal" />
+
+        <include layout="@layout/card_films"/>
+
     </LinearLayout>
 
-
-    <!--    </androidx.core.widget.NestedScrollView>-->
+    </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 
 
 </LinearLayout>
