--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -1,26 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="10dp">
+    android:layout_margin="10dp"
+    android:id="@+id/toolbar_main">
+
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/toolbar_movie_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="MOVIE"/>
+        android:text="@string/movie_toolbar_btn"/>
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/toolbar_people_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="PEOPLE"/>
+        android:text="@string/people_toolbar_btn"/>
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/toolbar_favorite_btn"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="FAVORITE"/>
+        android:text="@string/favorite_toolbar_btn"/>
 
 
 
