--- a/app/src/main/res/layout/main_activity.xml
+++ b/app/src/main/res/layout/main_activity.xml
@@ -26,7 +26,10 @@
         android:layout_gravity="bottom"
         app:layout_constraintBottom_toBottomOf="parent">
 
-        <include layout="@layout/bottom_menu" />
+        <include
+            android:id="@+id/toolbar"
+            layout="@layout/bottom_menu" />
+
 
     </FrameLayout>
 
