--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -32,6 +32,7 @@
         android:orientation="vertical">
 
         <TextView
+            android:layout_marginTop="40dp"
             android:id="@+id/now_playing_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
