--- a/app/src/main/res/layout/actors_fragment.xml
+++ b/app/src/main/res/layout/actors_fragment.xml
@@ -5,6 +5,6 @@
     android:layout_height="match_parent"
     tools:context=".ui.main.ActorsFragment">
 
-    <include layout="@layout/card_films"/>
+    <include layout="@layout/film_card_fragment"/>
 
 </FrameLayout>
