--- a/app/src/main/res/layout/card_films.xml
+++ b/app/src/main/res/layout/card_films.xml
@@ -6,6 +6,7 @@
     android:layout_height="wrap_content"
     android:layout_marginLeft="15sp"
     android:layout_marginTop="20sp"
+    android:layout_marginBottom="5dp"
     android:elevation="10sp"
     android:orientation="vertical"
     app:cardCornerRadius="9sp">
