--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -32,7 +32,7 @@
         android:orientation="vertical">
 
         <TextView
-            android:layout_marginTop="40dp"
+            android:layout_marginTop="50dp"
             android:id="@+id/now_playing_textview"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -108,7 +108,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="3dp"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        >
 
         <TextView
             android:id="@+id/upcoming_textview"
