--- a/app/src/main/res/layout/bottom_menu.xml
+++ b/app/src/main/res/layout/bottom_menu.xml
@@ -4,8 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
-    android:layout_margin="10dp"
-    android:id="@+id/toolbar_main">
+    android:layout_margin="@dimen/toolbar_margin"
+    android:id="@+id/toolbar_main"
+    >
 
 
     <androidx.appcompat.widget.AppCompatButton
