--- a/app/src/main/res/layout/main_fragment.xml
+++ b/app/src/main/res/layout/main_fragment.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main_container"
+    android:id="@+id/main_container_fragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -16,10 +16,12 @@
 <!--                android:layout_gravity="center"-->
 <!--                app:SpinKit_Color="@color/marrs_green" />-->
     <androidx.core.widget.NestedScrollView
+        android:id="@+id/nested_scroll_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
     <LinearLayout
+        android:id="@+id/main_linear_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="vertical">
@@ -28,7 +30,7 @@
         android:id="@+id/now_playing_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="@dimen/main_fragment_containers_margin"
         android:orientation="vertical">
 
         <TextView
@@ -39,7 +41,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@string/now_playing_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/main_fragment_text_view_containers_text_size" />
 
 
         <androidx.recyclerview.widget.RecyclerView
@@ -55,7 +57,7 @@
         android:id="@+id/popular_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="@dimen/main_fragment_containers_margin"
         android:orientation="vertical">
 
         <TextView
@@ -65,7 +67,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@string/popular_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/main_fragment_text_view_containers_text_size" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/popular_rv"
@@ -81,7 +83,7 @@
         android:id="@+id/top_rated_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="@dimen/main_fragment_containers_margin"
         android:orientation="vertical">
 
         <TextView
@@ -91,7 +93,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@string/top_rated_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/main_fragment_text_view_containers_text_size" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/top_rated_rv"
@@ -107,7 +109,7 @@
         android:id="@+id/upcoming_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="3dp"
+        android:layout_margin="@dimen/main_fragment_containers_margin"
         android:orientation="vertical"
         >
 
@@ -118,7 +120,7 @@
             android:fontFamily="sans-serif-black"
             android:text="@string/upcoming_tv"
             android:textColor="@android:color/black"
-            android:textSize="20sp" />
+            android:textSize="@dimen/main_fragment_text_view_containers_text_size" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/upcoming_rv"
