--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,6 +1,6 @@
 <resources xmlns:tools="http://schemas.android.com/tools">
     <!-- Base application theme. -->
-    <style name="Theme.SearchByMovies" parent="Theme.MaterialComponents.Light.DarkActionBar.Bridge">
+    <style name="Theme.SearchByMovies" parent="Theme.MaterialComponents.Light.NoActionBar">
         <!-- Primary brand color. -->
         <item name="colorPrimary">#5D6DF8</item>
         <item name="colorPrimaryVariant">@color/purple_700</item>
